--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="//cdn.quilljs.com/1.3.1/quill.bubble.css">
+    <link rel="stylesheet" href="//cdn.quilljs.com/1.3.1/quill.snow.css">
 </head>
 <body>
   <app-root></app-root>
