--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <title>MyProject</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="//cdn.quilljs.com/1.3.1/quill.bubble.css">
-    <link rel="stylesheet" href="//cdn.quilljs.com/1.3.1/quill.snow.css">
+  <link rel="stylesheet" href="//cdn.quilljs.com/1.3.1/quill.snow.css">
 </head>
 <body>
   <app-root></app-root>
 </body>
+<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 </html>
