--- a/src/index.html
+++ b/src/index.html
@@ -14,4 +14,5 @@
   <app-root></app-root>
 </body>
 <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+<script src="https://cdn.quilljs.com/1.1.6/quill.js"></script>
 </html>
