--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="//cdn.quilljs.com/1.3.1/quill.bubble.css">
   <link rel="stylesheet" href="//cdn.quilljs.com/1.3.1/quill.snow.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
