--- a/src/index.html
+++ b/src/index.html
@@ -17,4 +17,5 @@
 </body>
 <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 <script src="https://cdn.quilljs.com/1.1.6/quill.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
 </html>
