--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,47 @@
         rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <style type="text/css">
+      .loading {
+        display: none;
+        position: fixed;
+        height: 100vh;
+        width: 100vw;
+        z-index: 99999;
+        top: 0;
+        left: 0;
+      }
+      .icon-preload {
+        display: none;
+      }
+      @keyframes pulse {
+        0% {
+          transform: scale(1);
+        }
+        50% {
+          transform: scale(1.1);
+        }
+        100% {
+          transform: scale(1);
+        }
+      }
+      .loading {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .loading .icon-preload {
+        display: block;
+        width: 150px;
+        height: 150px;
+        animation: pulse 1s linear infinite;
+      }
+    </style>
+    <div class="loading">
+      <img src="/assets/bag-with-a-heart.svg" alt="" class="icon-preload">
+    </div>
+  </app-root>
 </body>
 <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 <script src="https://cdn.quilljs.com/1.1.6/quill.js"></script>
